--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-Мистер Ю о проектирование объектно-ориентированных интерфейсов:
+Мистер Ю о проектировании объектно-ориентированных интерфейсов:
 
 > Это C++, тут за тип TObject/Object/AbstractObject можно по морде получить.
